force-app/main/default/objects/vr__VR_Email_History_Lead__c/vr__VR_Email_History_Lead__c.object-meta.xml
<CustomObject>
    <description>VerticalResponse email campaign statistics for salesforce.com Leads</description>
    <label>VR Email History Lead</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VR Email History Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>