force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Bounced__c.field-meta.xml
<CustomField>
    <fullName>vr__Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bounced indicates that the email sent to the recipient was undeliverable</description>
    <label>Bounced</label>
    <type>Checkbox</type>
</CustomField>