force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Campaign_Hash__c.field-meta.xml
<CustomField>
    <fullName>vr__Campaign_Hash__c</fullName>
    <description>VerticalResponse campaign hash</description>
    <label>Campaign Hash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>