force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Company_Hash__c.field-meta.xml
<CustomField>
    <fullName>vr__Company_Hash__c</fullName>
    <description>VerticalResponse company hash</description>
    <label>Company Hash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>