force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Email_ID__c.field-meta.xml
<CustomField>
    <fullName>vr__Email_ID__c</fullName>
    <description>VerticalResponse email campaign ID</description>
    <label>Email ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>