force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Email_Type__c.field-meta.xml
<CustomField>
    <fullName>vr__Email_Type__c</fullName>
    <description>Type of email campaign sent using VerticalResponse</description>
    <label>Email Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>