force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Lead__c.field-meta.xml
<CustomField>
    <fullName>vr__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corresponds to the salesforce.com Lead who was sent a VerticalResponse email</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>VR Email History Lead</relationshipLabel>
    <relationshipName>VR_Email_History_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>