force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__List_Type__c.field-meta.xml
<CustomField>
    <fullName>vr__List_Type__c</fullName>
    <description>Corresponds to the type of mailing list used for the email campaign</description>
    <label>List Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>