force-app/main/default/objects/vr__VR_Email_History_Lead__c/fields/vr__Opened__c.field-meta.xml
<CustomField>
    <fullName>vr__Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opened indicates that the recipient opened the HTML version of the email campaign</description>
    <label>Opened</label>
    <type>Checkbox</type>
</CustomField>